# libnsgif-autotools

./: .gitignore  CHANGELOG  Makefile.am  README.md  autogen.sh  configure.ac  libnsgif.pc.in  update.sh
include/: Makefile.am
patches/: default-frame-delay.patch
src/: Makefile.am  libnsgif.c
